--- a/src/engine/camera/CMakeLists.txt
+++ b/src/engine/camera/CMakeLists.txt
@@ -1,2 +1,5 @@
-add_library(camera SHARED)
-target_sources(camera PRIVATE camera.cpp)
+add_subdirectory(perspective)
+add_subdirectory(orthographic)
+
+add_library(camera INTERFACE)
+target_link_libraries(camera INTERFACE perspective orthographic)
