--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -8,7 +8,8 @@ add_subdirectory(stb)
 add_subdirectory(VAO)
 add_subdirectory(VBO)
 add_subdirectory(EBO)
+add_subdirectory(text)
 
 
 add_library(engine INTERFACE)
-target_link_libraries(engine INTERFACE world camera mesh shader shader_program texture stb VAO VBO EBO)
+target_link_libraries(engine INTERFACE world camera mesh shader shader_program texture stb VAO VBO EBO text)
