--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,4 +3,7 @@ add_subdirectory(logger)
 add_subdirectory(glad)
 
 add_executable(${PROJECT_NAME} main.cpp)
-target_link_libraries(${PROJECT_NAME} engine logger glfw glm::glm glad)
+
+include_directories(irrklang)
+
+target_link_libraries(${PROJECT_NAME} engine logger glfw glm::glm glad IrrKlang)
