imgui object list

--- a/imgui.ini
+++ b/imgui.ini
@@ -3,6 +3,14 @@ Pos=60,60
 Size=400,400
 
 [Window][Dear ImGui Demo]
-Pos=2070,151
+Pos=162,228
 Size=1125,1029
+
+[Window][Streamline Engine]
+Pos=210,513
+Size=848,563
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=1136,28
+Size=476,450
 
