imgui debug tree

--- a/imgui.ini
+++ b/imgui.ini
@@ -7,10 +7,11 @@ Pos=162,228
 Size=1125,1029
 
 [Window][Streamline Engine]
-Pos=210,513
-Size=848,563
+Pos=151,383
+Size=1130,606
 
 [Window][Dear ImGui Metrics/Debugger]
-Pos=1136,28
+Pos=325,457
 Size=476,450
+Collapsed=1
 
