debug window with callbacks

--- a/imgui.ini
+++ b/imgui.ini
@@ -11,7 +11,10 @@ Pos=145,162
 Size=307,420
 
 [Window][Dear ImGui Metrics/Debugger]
-Pos=325,457
+Pos=910,119
 Size=476,450
-Collapsed=1
+
+[Window][Streamline Engine Debugger]
+Pos=34,100
+Size=283,197
 
