--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -11,7 +11,8 @@ add_subdirectory(EBO)
 add_subdirectory(text)
 add_subdirectory(window)
 add_subdirectory(config)
+add_subdirectory(debugger)
 
 
 add_library(engine INTERFACE)
-target_link_libraries(engine INTERFACE world camera mesh shader shader_program texture stb VAO VBO EBO text window config)
+target_link_libraries(engine INTERFACE world camera mesh shader shader_program texture stb VAO VBO EBO text window config debugger)
