removed old imgui functions

--- a/imgui.ini
+++ b/imgui.ini
@@ -13,8 +13,9 @@ Size=307,420
 [Window][Dear ImGui Metrics/Debugger]
 Pos=42,326
 Size=195,104
+Collapsed=1
 
 [Window][Streamline Engine Debugger]
-Pos=204,127
+Pos=249,170
 Size=466,532
 
