added debug options, unlimited children

--- a/imgui.ini
+++ b/imgui.ini
@@ -16,6 +16,7 @@ Size=195,104
 Collapsed=1
 
 [Window][Streamline Engine Debugger]
-Pos=249,170
-Size=466,532
+Pos=151,183
+Size=574,461
+Collapsed=1
 
