--- a/src/engine/mesh/CMakeLists.txt
+++ b/src/engine/mesh/CMakeLists.txt
@@ -4,4 +4,4 @@ add_subdirectory(pyramid)
 add_subdirectory(obj)
 
 add_library(mesh INTERFACE)
-target_link_libraries(mesh INTERFACE rectangle circle pyramid obj)
+target_link_libraries(mesh INTERFACE rectangle circle pyramid obj material)
