--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -1,25 +1,25 @@
 add_library(engine STATIC)
 
 target_sources(engine PRIVATE
-    application/application.cpp
-    camera/camera.cpp
-    camera/orthographic.cpp
-    camera/perspective.cpp
-    components/AABB.cpp
-    components/Transform.cpp
-    components/RigidBody.cpp
-    config/config.cpp
-    entity/entity.cpp
-    framebuffer/framebuffer.cpp
-    logger/logger.cpp
-    mesh/mesh.cpp
-    model/model.cpp 
-    scene/scene.cpp
-    shader/shader.cpp
+  Application/Application.cpp
+    Camera/Camera.cpp
+    Camera/Orthographic.cpp
+    Camera/Perspective.cpp
+    Components/AABB.cpp
+    Components/Transform.cpp
+    Components/RigidBody.cpp
+    Config/Config.cpp
+    Entity/Entity.cpp
+    Framebuffer/Framebuffer.cpp
+    Logger/Logger.cpp
+    Mesh/Mesh.cpp
+    Model/Model.cpp
+    ResourceManager/ResourceManager.cpp 
+    Scene/Scene.cpp
+    Shader/Shader.cpp
     stb/stb_image.cpp
-    text/text.cpp
-    texture/texture.cpp
-    resource_manager/resource_manager.cpp
+    Text/Text.cpp
+    Texture/Texture.cpp
 )
 
 target_link_libraries(engine PUBLIC glfw glm::glm glad imgui assimp::assimp)
