--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,5 +2,8 @@ add_subdirectory(engine)
 add_subdirectory(libstreamline)
 add_subdirectory(glad)
 
-add_executable(${PROJECT_NAME} main.cpp)
-target_link_libraries(${PROJECT_NAME} engine libstreamline glad)
+target_link_libraries(${PROJECT_NAME}
+    glad
+    engine
+    libstreamline
+)
