--- a/src/libstreamline/CMakeLists.txt
+++ b/src/libstreamline/CMakeLists.txt
@@ -1,8 +1,7 @@
 add_library(libstreamline STATIC)
 
 target_sources(libstreamline PRIVATE
-    config/config.cpp
-    config/json/json.cpp
+    json/json.cpp
     debug/logger.cpp
 )
 
