--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,9 @@ cmake_minimum_required(VERSION 3.22)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_COMPILER "g++")
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 23)
 
-set(PROJECT_NAME "streamline-engine")
-project(${PROJECT_NAME})
+project(streamline-engine)
 
 find_package(glfw3 3.3 REQUIRED)
 find_package(glm REQUIRED)
@@ -27,6 +26,8 @@ if(APPLE AND ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
     endif()
 endif()
 
+add_compile_definitions(GLM_ENABLE_EXPERIMENTAL)
+
 add_compile_options(
     -Werror
     -Wall
@@ -36,14 +37,15 @@ add_compile_options(
     -g
 )
 
-add_compile_definitions(GLM_ENABLE_EXPERIMENTAL)
 
-include_directories(
-    src
-    extern/imgui
-    extern/imgui/backends
-    extern/entt/src
-    ${ASSIMP_INCLUDE_DIRS}
+include_directories(src extern extern/stb extern/glad extern/imgui extern/imgui/backends)
+
+add_library(glad STATIC
+    extern/glad/gl.c
+)
+
+add_library(stb STATIC
+    extern/stb/stb_image.cpp
 )
 
 add_library(imgui STATIC
@@ -55,8 +57,13 @@ add_library(imgui STATIC
     extern/imgui/backends/imgui_impl_opengl3.cpp
     extern/imgui/backends/imgui_impl_glfw.cpp
 )
-
 target_link_libraries(imgui PRIVATE glfw)
 
-add_subdirectory(extern/entt)
-add_subdirectory(src)
+add_executable(streamline-engine src/main.cpp)
+
+target_sources(streamline-engine PRIVATE
+    src/core/application.cpp
+    src/core/window.cpp
+)
+
+target_link_libraries(streamline-engine PUBLIC glfw glm::glm glad stb imgui assimp::assimp)
